2010-09-24  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectPropertiesFactory.cpp (getObjectPropertiesDetailed):
	refs #1731 Change double-clicking on "Any" object
	behavior. Tooltip shown for the object "any" in rules says
	"to modify the rule drag and drop an object from the tree here"
	instead of atributes of the object "any".

	* FWBSettings.cpp (init): fixed #1738 "Enable tooltips by default"

	* ObjectManipulator.cpp (editSelectedObject): fixed #1729 "double
	clicking a folder in the tree should expand it rather than open it
	in the editor".

	* ObjectTreeView.cpp (edit): fixed #1732 "Double clicking on
	object with child objects should auto expand them".  Double
	clicking on objects and folders in the tree expands and collapses
	them, as well as opens object in the editor.

	* ObjectManipulator.cpp (expandObjectInTree): fixed #1715
	"automatically expand new firewall and new host objects in the
	tree once they are created"

	* configlets/linux24/check_utilities: fixed #1714 "make checking
	for MODPROBE conditional". There is no need to check if modprobe
	utility exists on the firewall machine if it is not used by the
	script.

2010-09-22  Vadim Kurland  <vadim@vk.crocodile.org>

	* instDialog_ui_ops.cpp (instDialog::readInstallerOptionsFromFirewallObject): 
	fixed #1724 . There was a problem with pscp.exe and putty
	sessions. Plink.exe accepts session name in place of the host name
	on the command line, but pscp.exe does not. We ask user to enter
	session name in the "alternative name or address to use to
	communicate with the firewall" input field in the "Installer" tab
	of the firewall settings dialog and then use it in place of the
	host name in the command line for pscp.exe and plink.exe. This
	works with plink.exe but breaks pscp.exe which interprets it as a
	host name and fails with an error ""ssh_init: Host does not
	exist". The fix checks if what user entered in the "alternative
	host or address field" is a session name and uses different