@@ -816,11 +816,22 @@ void RuleSetView::itemDoubleClicked(const QModelIndex& index)
 {
     if (!index.isValid()) return;
     if (index.row()<0) return;
-    if ( fwosm->selectedObject!=NULL)
+
+    ColDesc colDesc = index.data(Qt::UserRole).value<ColDesc>();
+    
+    if (fwosm->selectedObject!=NULL)
     {
+        // #1731 do not open object "any" in the editor and in the tree
+        if ((colDesc.type == ColDesc::Object || colDesc.type == ColDesc::Time) &&
+            (fwosm->selectedObject->getId() == FWObjectDatabase::ANY_ADDRESS_ID ||
+             fwosm->selectedObject->getId() == FWObjectDatabase::ANY_SERVICE_ID ||
+             fwosm->selectedObject->getId() == FWObjectDatabase::ANY_INTERVAL_ID))
+            return;
+
         QCoreApplication::postEvent(
             mw,
-            new showObjectInTreeEvent(project->getFileName(), fwosm->selectedObject->getId()));
+            new showObjectInTreeEvent(
+                project->getFileName(), fwosm->selectedObject->getId()));
 
     }
     editSelected(index);
@@ -828,6 +839,15 @@ void RuleSetView::itemDoubleClicked(const QModelIndex& index)
 
 void RuleSetView::editSelected(const QModelIndex& index)
 {
+    ColDesc colDesc = index.data(Qt::UserRole).value<ColDesc>();
+    FWObject *obj = fwosm->selectedObject;
+    // #1731 do not open object "any" in the editor and in the tree
+    if ((colDesc.type == ColDesc::Object || colDesc.type == ColDesc::Time) &&
+        (obj->getId() == FWObjectDatabase::ANY_ADDRESS_ID ||
+         obj->getId() == FWObjectDatabase::ANY_SERVICE_ID ||
+         obj->getId() == FWObjectDatabase::ANY_INTERVAL_ID))
+        return;
+
     if (!mw->isEditorVisible()) mw->showEditor();
     switchObjectInEditor(index);
 }
@@ -908,7 +928,7 @@ bool RuleSetView::switchObjectInEditor(const QModelIndex& index, bool validate)
         {
             if ( fwosm->selectedObject!=NULL)
             {
-                object=fwosm->selectedObject;
+                object = fwosm->selectedObject;
                 break;
             }
         }
